--- a/core/discovery/disc.gni
+++ b/core/discovery/disc.gni
@@ -41,11 +41,11 @@ if (defined(ohos_lite)) {
   }
 } else {
   disc_server_src += [
-    "$dsoftbus_root_path/core/discovery/ipc/standard/src/disc_client_proxy.cpp",
-    "$dsoftbus_root_path/core/discovery/ipc/standard/src/disc_client_proxy_standard.cpp",
+    "$dsoftbus_root_path/core/discovery/ipc/$os_type/src/disc_client_proxy.cpp",
+    "$dsoftbus_root_path/core/discovery/ipc/$os_type/src/disc_client_proxy_standard.cpp",
   ]
   disc_server_inc += [
-    "$dsoftbus_root_path/core/discovery/ipc/standard/include",
+    "$dsoftbus_root_path/core/discovery/ipc/$os_type/include",
     "//utils/system/safwk/native/include",
   ]
   disc_server_deps += [ "//utils/native/base:utils" ]
