--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -29,7 +29,7 @@ ohos_unittest("AuthTest") {
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/message_handler/include",
     "$dsoftbus_root_path/core/connection/interface",
-    "$dsoftbus_root_path/core/frame/standard/init/include",
+    "$dsoftbus_root_path/core/frame/$os_type/init/include",
     "$dsoftbus_root_path/core/frame/common/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
