--- a/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn
@@ -24,10 +24,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path//core/common/include",
     ]
     deps = [
-      "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
-      "$dsoftbus_root_path/sdk/bus_center/service:dsoftbus_bus_center_service_sdk",
-      "$dsoftbus_root_path/sdk/transmission:dsoftbus_trans_session_manager_sdk",
-      "$dsoftbus_root_path/sdk/transmission/session:dsoftbus_trans_session_sdk",
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/sdk:softbus_client",
       "//third_party/bounds_checking_function:libsec_shared",
     ]
   }
@@ -47,10 +45,8 @@ if (defined(ohos_lite)) {
     ]
 
     deps = [
-      "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
-      "$dsoftbus_root_path/sdk/bus_center/service:dsoftbus_bus_center_service_sdk",
-      "$dsoftbus_root_path/sdk/transmission:dsoftbus_trans_session_manager_sdk",
-      "$dsoftbus_root_path/sdk/transmission/session:dsoftbus_trans_session_sdk",
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/sdk:softbus_client",
       "//utils/native/base:utils",
     ]
 
