--- a/sdk/transmission/trans_channel/udp/file/file_sdk.gni
+++ b/sdk/transmission/trans_channel/udp/file/file_sdk.gni
@@ -29,10 +29,12 @@ if (dsoftbus_standard_feature_trans_udp_file == true) {
 
   native_source_path = rebase_path("$dsoftbus_root_path")
   dep_file = "components/nstackx_enhanced/nstackx_core/dfile/BUILD.gn"
-  enhanced = exec_script(
-          "$dsoftbus_root_path/check_sub_module.py",
-          [ "$native_source_path","dep_file"],
-          "value")
+  enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                         [
+                           "$native_source_path",
+                           "dep_file",
+                         ],
+                         "value")
   if (enhanced) {
     trans_file_sdk_inc += [
       "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
