--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -35,4 +35,5 @@ declare_args() {
   dsoftbus_standard_feature_lnn_wifiservice_dependence = false
 
   dsoftbus_standard_feature_build_shared_sdk = true
+  dsoftbus_standard_feature_ifname_prefix = false
 }
