--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -99,7 +99,7 @@ if (defined(ohos_lite)) {
     include_dirs += conn_common_inc + trans_common_inc
     sources = common_utils_src
     sources += conn_common_src + trans_common_src
-    defines = [ "DEFAULT_STORAGE_PATH=\"/data/data\"" ]
+    defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
     defines += [ "SOFTBUS_STANDARD_SYSTEM" ]
 
     if (is_asan) {
