--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -1,4 +1,11 @@
 {
+    "jobs" : [{
+            "name" : "post-fs-data",
+            "cmds" : [
+                "mkdir /data/service/el1/public/dsoftbus 0771 system system"
+            ]
+        }
+    ],
     "services" : [{
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
