IssueNo:https://gitee.com/openharmony/notification_ces_standard/issues/I53O6Y Description:ces_standard change to common_event_service Sig: SIG_ApplicationFramework Feature or Bugfix:Feature Binary Source:No
Signed-off-by: liqiang <liqiang121@huawei.com>
Change-Id: I617e8809c4a4095a4fa99eddc48cb6b6cfc55ada

--- a/adapter/common/bus_center/bus_center_adapter.gni
+++ b/adapter/common/bus_center/bus_center_adapter.gni
@@ -94,7 +94,8 @@ if (defined(ohos_lite)) {
       ]
       bus_center_adapter_deps +=
           [ "${aafwk_path}/interfaces/innerkits/want:want" ]
-      bus_center_adapter_external_deps += [ "ces_standard:cesfwk_innerkits" ]
+      bus_center_adapter_external_deps +=
+          [ "common_event_service:cesfwk_innerkits" ]
     } else {
       bus_center_adapter_src += [
         "$adapter_bus_center_path/wlan/lnn_wifiservice_monitor_virtual.cpp",
