--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -14,6 +14,8 @@
 group("connectionTest") {
   testonly = true
   deps = [
+    "ble:softbus_conn_ble_test",
+    "br:softbus_conn_br_test",
     "common:softbus_conn_common_test",
     "manager:softbus_conn_manager_test",
     "tcp:softbus_tcp_manager_test",
