--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -75,8 +75,10 @@ if (defined(ohos_lite)) {
     ]
     if (ohos_kernel_type == "liteos_m") {
       defines = [ "SOFTBUS_MINI_SYSTEM" ]
+      defines += [ "__STDC_FORMAT_MACROS" ]
     } else {
       defines = [ "DEFAULT_STORAGE_PATH=\"/usr\"" ]
+      defines += [ "__STDC_FORMAT_MACROS" ]
       defines += [ "SOFTBUS_SMALL_SYSTEM" ]
     }
     deps = [ "$dsoftbus_root_path/adapter:softbus_adapter" ]
@@ -101,7 +103,7 @@ if (defined(ohos_lite)) {
     sources += conn_common_src + trans_common_src
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
     defines += [ "SOFTBUS_STANDARD_SYSTEM" ]
-
+    defines += [ "__STDC_FORMAT_MACROS" ]
     if (is_asan) {
       defines += [ "ASAN_BUILD" ]
     }
