--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -60,15 +60,16 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/log/softbus_adapter_log.c",
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
-      deps = [
-        "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite",
-      ]
+
+      deps = [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
       if (dsoftbus_standard_feature_encrypt == 0) {
-        sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c", ]
-        deps += [ "//third_party/mbedtls", ]
-      } else if(dsoftbus_standard_feature_encrypt == 1) {
-        sources += [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c", ]
-        deps += [ "//third_party/openssl:libcrypto_shared", ]
+        sources +=
+            [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
+        deps += [ "//third_party/mbedtls" ]
+      } else if (dsoftbus_standard_feature_encrypt == 1) {
+        sources +=
+            [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
+        deps += [ "//third_party/openssl:libcrypto_shared" ]
       }
       public_configs = [ ":dsoftbus_adapter_common_interface" ]
     }
@@ -100,11 +101,13 @@ if (defined(ohos_lite)) {
         "//third_party/bounds_checking_function:libsec_shared",
       ]
       if (dsoftbus_standard_feature_encrypt == 0) {
-        sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c", ]
-        deps += [ "//third_party/mbedtls", ]
-      } else if(dsoftbus_standard_feature_encrypt == 1) {
-        sources += [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c", ]
-        deps += [ "//third_party/openssl:libcrypto_shared", ]
+        sources +=
+            [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
+        deps += [ "//third_party/mbedtls" ]
+      } else if (dsoftbus_standard_feature_encrypt == 1) {
+        sources +=
+            [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
+        deps += [ "//third_party/openssl:libcrypto_shared" ]
       }
       public_configs = [ ":dsoftbus_adapter_common_interface" ]
     }
@@ -143,11 +146,11 @@ if (defined(ohos_lite)) {
       "//utils/native/base:utils",
     ]
     if (dsoftbus_standard_feature_encrypt == 0) {
-      sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c", ]
-      public_deps += [ "//third_party/mbedtls", ]
+      sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
+      public_deps += [ "//third_party/mbedtls" ]
     } else if (dsoftbus_standard_feature_encrypt == 1) {
-      sources += [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c", ]
-      public_deps += [ "//third_party/openssl:libcrypto_shared", ]
+      sources += [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
+      public_deps += [ "//third_party/openssl:libcrypto_shared" ]
     }
     public_configs = [ ":config_adapter_common" ]
     if (is_standard_system) {
